more work on vulkan